UpdateToStreamAPI