@@ -1,6 +1,5 @@
 package com.dota.personaji.dota2.service;
 
-import com.dota.personaji.dota2.config.CharacterCache;
 import com.dota.personaji.dota2.dao.AbilityRepository;
 import com.dota.personaji.dota2.model.Ability;
 import org.junit.jupiter.api.Test;
@@ -10,9 +9,11 @@ import org.mockito.Mockito;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.*;
@@ -26,13 +27,10 @@ class AbilityServiceTest {
     @Mock
     private AbilityRepository abilityRepository;
 
-    @Mock
-    private CharacterCache cache;
-
     @Test
     void testGetAllAbilities() {
         Ability ability = new Ability();
-        when(abilityRepository.findAll()).thenReturn(Arrays.asList(ability));
+        when(abilityRepository.findAll()).thenReturn(List.of(ability));
         assertEquals(1, abilityService.getAllAbilities().size());
     }
 
@@ -74,4 +72,45 @@ class AbilityServiceTest {
         abilityService.deleteAbility(1L);
         verify(abilityRepository, times(1)).deleteById(anyLong());
     }
+
+    @Test
+    void testGetAbilityByIdNotFound() {
+        when(abilityRepository.findById(anyLong())).thenReturn(Optional.empty());
+        assertThrows(RuntimeException.class, () -> abilityService.getAbilityById(1L));
+    }
+
+    @Test
+    void testUpdateAbilityNotFound() {
+        when(abilityRepository.findById(anyLong())).thenReturn(Optional.empty());
+        Ability abilityDetails = new Ability();
+        assertThrows(RuntimeException.class, () -> abilityService.updateAbility(1L, abilityDetails));
+    }
+
+    @Test
+    void testPatchAbilityNotFound() {
+        when(abilityRepository.findById(anyLong())).thenReturn(Optional.empty());
+        Ability abilityDetails = new Ability();
+        assertThrows(RuntimeException.class, () -> abilityService.patchAbility(1L, abilityDetails));
+    }
+
+    @Test
+    void testPatchAbilityName() {
+        Ability ability = new Ability();
+        Ability abilityDetails = new Ability();
+        abilityDetails.setName("New Name");
+        when(abilityRepository.findById(any())).thenReturn(Optional.of(ability));
+        when(abilityRepository.save(any())).thenReturn(ability);
+        assertEquals("New Name", abilityService.patchAbility(1L, abilityDetails).getName());
+    }
+
+    @Test
+    void testPatchAbilityDescription() {
+        Ability ability = new Ability();
+        Ability abilityDetails = new Ability();
+        abilityDetails.setDescription("New Description");
+        when(abilityRepository.findById(any())).thenReturn(Optional.of(ability));
+        when(abilityRepository.save(any())).thenReturn(ability);
+        assertEquals("New Description", abilityService.patchAbility(1L, abilityDetails).getDescription());
+    }
+
 }
